--- a/Views/Skills/_SkillRowCreator2.cshtml
+++ b/Views/Skills/_SkillRowCreator2.cshtml
@@ -33,8 +33,7 @@
 
 
 
-        <input type="button" id='mybutton' value="[POST]" />
-
+        <!-- <input type="button" id='mybutton' value="[POST]" /> -->
         <!-- FORM DATA SUBMISSION -->
         <!-- <input id="submit" type="submit" class="btn btn-primary" value="SUBMIT"> -->
 
@@ -64,7 +63,7 @@
     //
     //
     //
-    function SubmitRow(elem) {
+    function SubmitRow() {
         
         this.SubmitSkillRow();
 
